add style sheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <base target="_top">
     <title><?= SITE_TITLE ?></title>
+    <?!= HtmlService.createHtmlOutputFromFile("index_css").getContent() ?>
   </head>
   <body>
     <h1><?= SITE_TITLE ?></h1>
