add csv execution

--- a/index_html.html
+++ b/index_html.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1><?= SITE_TITLE ?></h1>
-    <pre><?= main(); ?></pre>
+    <pre><?= mainHtml(); ?></pre>
   </body>
 </html>
